--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retry",
+  "name": "blocipedia",
   "version": "0.0.1",
   "private": true,
   "main": "app.js",
@@ -15,6 +15,7 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "ejs": "^2.5.7",
     "express": "^4.13.3",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
@@ -27,7 +28,8 @@
     "passport-local": "^1.0.0",
     "pg": "^6.0.1",
     "pg-hstore": "2.3.2",
-    "sequelize": "^3.5.1",
+    "sequelize": "^4.35.1",
+    "sequelize-cli": "^4.0.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
