--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob": "^6.0.4",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.1.1",
+    "markdown": "^0.5.0",
     "method-override": "^2.3.0",
     "morgan": "^1.6.1",
     "mysql": "^2.15.0",
@@ -30,7 +31,8 @@
     "pg-hstore": "2.3.2",
     "sequelize": "^4.35.1",
     "sequelize-cli": "^4.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "stripe": "^5.5.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
