--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "dotenv": "^5.0.0",
     "ejs": "^2.5.7",
     "express": "^4.13.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.1.1",
@@ -25,7 +28,6 @@
     "morgan": "^1.6.1",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
     "pg": "^6.0.1",
     "pg-hstore": "2.3.2",
@@ -37,9 +39,10 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "debug": "^2.2.0",
+    "faker": "^4.1.0",
     "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "mocha": "^4.0.1",
     "nyc": "^10.0.0",
